<resources>
    <string name="app_name">ATC Sensory Device</string>
    <string name="scan_start">Scanning…</string>
    <string name="scan_stop">Stopped Scanning</string>
    <string name="start">Start</string>
    <string name="pair_device">Pair Device</string>
    <string name="free_run">Free Run</string>
    <string name="edit_add_profile">Edit/Add Profile</string>
    <string name="name">Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="test">Test</string>
    <string name="profiles">Profiles</string>
    <string name="connection_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="pressure">Pressure: </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pressure_profiles">Pressure Profiles</string>
    <string name="autism_treatment_center">Autism Treatment Center</string>
    <string name="clear">Clear</string>
    <string name="addProfileButton">AddProfileButton</string>
    <string name="ratTitle">What Permissions Does This App Use?</string>
    <string name="ratBTAdmin">Bluetooth Admin</string>
    <string name="ratBTScan">Bluetooth Scan</string>
    <string name="ratBTConn">Bluetooth Connect</string>
    <string name="ratLocTitle">Course / Fine Location Access</string>
    <string name="disconnectDeviceText">Disconnect</string>
    <string name="n_a">N/A</string>
    <string name="timerWarningText">Timer will not override the overall time limit. Go to settings to change time limit.</string>
    <string name="device_name">Device Name:</string>
    <string name="mac_address">MAC Address:</string>
    <string name="connect">Connect</string>
    <string name="profile_information">Profile Information</string>
    <string name="select_activation_mode">Select Activation Mode</string>
    <string name="monitor">Monitor</string>
    <string name="connecting">Connecting...</string>
    <string name="manualModeInfo">In Manual Mode, the bladder only inflates as long as the \'Start\' button is held.</string>
    <string name="normalModeInfo">In Normal Mode, the bladder will inflate to the specified PSI and stay there unless stopped or the global timer expires.</string>
    <string name="target">Target:</string>
    <string name="cancel">Cancel</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="delete">Delete</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>
    <string name="bluetooth_enabled">Bluetooth Enabled</string>
    <string name="bluetooth_permissions_granted">Bluetooth Permissions Granted</string>
    <string name="textview">TextView</string>
    <string name="master_time_limit_seconds">Maximum Time (Seconds)</string>
    <string name="save_settings">Save Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="request_permissions">Request Permissions</string>
    <string-array name="modes_array">
        <item>Normal</item>
        <item>Manual</item>
        <item>Timer</item>
    </string-array>
</resources>