<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/ratDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ratTitle"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btAdminRatTItle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locRatText"
        android:layout_marginTop="20dp"
        android:text="@string/ratBTAdmin"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/locRatTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratDialogTitle"
        android:layout_marginTop="20dp"
        android:text="@string/ratLocTitle"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/locRatText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locRatTitle"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/btScanRatTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminRatText"
        android:layout_marginTop="16dp"
        android:text="@string/ratBTScan"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/btConnTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scanRatText"
        android:layout_marginTop="16dp"
        android:text="@string/ratBTConn"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/adminRatText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btAdminRatTItle"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/scanRatText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btScanRatTitle"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/connRatText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btConnTitle"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

</RelativeLayout>