<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsContainer"
    style="@style/backgroundOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/connectionTitle"
        style="@style/titleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/connection_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/connectionSettingsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/bluetooth_settings"
                android:textAlignment="center" />

            <androidx.cardview.widget.CardView
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            style="@style/defaultText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/bluetooth_enabled" />

                        <TextView
                            android:id="@+id/btStatus"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:text="@string/textview"
                            android:textAlignment="center" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            style="@style/defaultText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/bluetooth_permissions_granted" />

                        <TextView
                            android:id="@+id/permissionStatus"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:text="@string/textview"
                            android:textAlignment="center" />

                    </TableRow>

                </TableLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/requestPermissionsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/request_permissions" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/general_settings"
                android:textAlignment="center" />

            <androidx.cardview.widget.CardView
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/timeLimitTitle"
                            style="@style/defaultText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/master_time_limit_seconds" />

                        <EditText
                            android:id="@+id/editTextNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:inputType="number"
                            android:maxLength="3"
                            android:singleLine="true"
                            android:textAlignment="center"
                            android:textColorHint="#78909C"
                            android:textSize="20sp" />

                    </TableRow>

                </TableLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/saveSettingsButton"
                style="@style/defaultButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/save_settings"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>